# mcp

./: .env  README-DEPLOYMENT.md  create_deployment_package.sh  debug_mcp.py  deploy_lambda.py  deploy_minimal.py  deploy_simple.py  deploy_via_s3.py  deploy_with_deps.py  destroy_aws_resources.sh  env.example  fastapi_server.py  lambda_handler.py  main.py  mcp_proxy.py  pyproject.toml  requirements.txt  response.json  server.py  simple_mcp_server.py  test-payload.json  test_config.py  test_fastapi_server.py  test_mcp_tools.py
.github/workflows/: deploy.yml
prompts/: greeting_prompt.py
resources/: greeting_resource.py
tools/: __init__.py  csv_tools.py  parquet_tools.py  s3_tools.py
utils/: file_reader.py
