[project]
name = "spike-fast-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.14.1",
    "pandas>=2.3.2",
    "boto3>=1.34.0",
    "mangum>=0.19.0",
    "rpds-py>=0.27.1",
]

[tool.setuptools]
py-modules = ["lambda_handler", "server", "main", "generate_parquet"]
packages = ["tools", "utils", "prompts", "resources"]
