[project]
name = "spike-fast-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.14.1",
    "pandas>=2.3.2",
    "boto3>=1.34.0",
    "mangum>=0.19.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
]

[tool.setuptools]
py-modules = ["lambda_handler", "server", "main", "generate_parquet"]
packages = ["tools", "utils", "prompts", "resources"]
